# sma

./: .gitignore  Cargo.toml  LICENSE  README.md  clean.sh  package-lock.json  package.json  release.sh  run_gui.sh  run_sma.sh  sma_test_config.json  test.sh  update.sh
cli/: Cargo.toml
cli/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
gui/: package-lock.json  package.json  svelte.config.js
gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/lib/: Start-table.svelte  State.ts  rust-bindings.ts
gui/src/routes/: +page.svelte
run/: Cargo.toml
run/src/: lib.rs
sma/: Cargo.toml  build.rs
sma/src/: lib.rs  main.rs
sma/test_program/: test.rs
sma/testbins/test/: Cargo.toml
sma/testbins/test/src/: main.rs
src/: main.rs  my_lib.rs  tests.rs
src/my_lib/: cli.rs  config.rs  errors.rs  gui.rs  mod.rs  run.rs
test_program/: build_test.sh  test  test.rs
