[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GabbeHags"]
readme = "README.md"
repository = "https://github.com/GabbeHags/sma"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "gui/src-tauri",
    "cli",
    "config",
    "sma"
]
default-members = [
    "gui/src-tauri",
    "sma"
]

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
strip = true

[profile.prod]
inherits = "release"
opt-level = 3

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
path-clean = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.1"
sysinfo = "0.29"
tauri = { version = "1.3.0", features = ["dialog-open", "dialog-save", "dialog-message"] }
tauri-build = { version = "1.3.0", features = [] }

# Local dependencies
cli = {path = "cli"}
config = {path = "config"}
