[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GabbeHags"]
readme = "README.md"
repository = "https://github.com/GabbeHags/sma"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
resolver = "2"
members = [
    "gui/src-tauri",
    "cli",
    "config",
    "sma",
]
default-members = [
    "gui/src-tauri",
    "sma"
]

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
strip = true

[profile.prod]
inherits = "release"
opt-level = 3

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
path-clean = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3.0"
sysinfo = "0.30.6"
tauri = { version = "1.6.1", features = ["dialog-open", "dialog-save", "dialog-message", "dialog-ask", "window-set-title"] }
tauri-build = { version = "1.4.0", features = [] }
winapi = {version = "0.3", features = ["wincon", "winuser"]}
mslnk = "0.1"


# Local dependencies
cli = {path = "cli"}
config = {path = "config"}

# dev-dependencies
test-binary = "3.0"
tempdir = "0.3"
