[package]
name = "cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
path-clean = { workspace = true }
clap = { workspace = true }

