[package]
name = "gui"
default-run = "gui"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel"]
rust-version = "1.68.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2.4", features = [] }
anyhow = "1.0"

cli = {path = "../../cli"}
config = {path = "../../config"}
run = {path = "../../run"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
